# huggle-lite

./: .gitmodules  README.md  configure
src/: configure  configure_android_armv7  configure_droid  readme.md
src/HuggleLite/: CMakeLists.txt  HuggleLite.pro  definitions.hpp  login.cpp  login.hpp  login.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  pictures.qrc  queue.cpp  queue.hpp  resources.cpp  resources.hpp  text.qrc
src/HuggleLite/Resources/: test_diff.htm  test_diff.org
src/HuggleLite/android/: AndroidManifest.xml
